# JacobsLadder3D

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/mycardboarddreams/jacobsladder/deluxe/drivers/: CubeDriverTest.java
app/src/debug/: AndroidManifest.xml
app/src/free/: AndroidManifest.xml
app/src/free/res/layout/: preference_group_custom_panel.xml
app/src/free/res/values-zh/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jniapi.cpp  jniapi.h  wallpaper.cpp  wallpaper.h  wallpapercreator.cpp  wallpaperhandler.cpp
app/src/main/cpp/Drawing/: bufferbindings.cpp  drawing.cpp  drawing.h  objectbuffers.cpp  objectbuffers.h  textures.cpp  textures.h
app/src/main/cpp/Drawing/ColorSets/: colorset.cpp  colorset.h  facecolor.cpp  jacobsladder.cpp  light.h  utils.h
app/src/main/cpp/Drivers/: cubedriver.cpp  cubedriver.h  cubedrivercreate.cpp  cubedrivertouch.cpp
app/src/main/cpp/Drivers/Goals/: goalcuboid.h  goalline.h  goalobject.cpp  goalobject.h  goalplane.h  goalpointtype.h  goals.cpp  goals.h
app/src/main/cpp/Drivers/Grid/: grid.h  gridalgorithm.cpp  gridcreate.cpp  gridcubes.cpp  gridposition.cpp  gridposition.h  gridpositionstate.h  gridutilities.cpp
app/src/main/cpp/Geometry/: corner.h  cube.cpp  cube.h  dimension.h  position.h
app/src/main/cpp/Stats/: aggregatestats.h  driverstats.h  goalstats.h  gridstats.h  iterativecollectionsstats.h  statssnapshot.cpp  statssnapshot.h
app/src/main/cpp/SurfaceRenderer/: jniapi.cpp  jniapi.h  logger.h  native_handle.h  surfacehandler.cpp  surfacehandler.h  surfacerenderer.cpp  surfacerenderer.h  surfacerenderer_render.cpp  surfaceutils.cpp  surfaceutils.h
app/src/main/cpp/Template/: templatecreator.cpp  templatewallpaper.cpp  templatewallpaper.h
app/src/main/cpp/TestSuite/: cubedrivertest.cpp  cubedrivertest.h
app/src/main/cpp/Utils/: alliterativecollections.cpp  alliterativecollections.h  iterativecollection.cpp  iterativecollection.h  iterativecollectionmember.h  iterativelisttypes.h  linkedlistitem.h  timer.cpp  timer.h  utils.cpp  utils.h
app/src/main/java/com/mycardboarddreams/jacobsladder/: AnalyticsHelper.java  Dimensions.java  JacobsLadderService.java  SettingsActivity.java  ThemeManager.java  ThemesHelper.java
app/src/main/java/com/mycardboarddreams/jacobsladder/baselib/: NativeGLWallpaperService.java
app/src/main/java/com/mycardboarddreams/jacobsladder/preferences/: CheckBoxVerticalPreference.java  DropDownHeaderPreference.java  SaveCustomThemePreference.java  SeekBarPreference.java  SeekBarSummaryPreference.java  TextListPopupPreference.java  ThemeSelectAdapter.java  ThemeSelectPreference.java
app/src/main/java/com/mycardboarddreams/jacobsladder/preferences/custom/: CustomColorsCategoryPreference.java
app/src/main/java/com/mycardboarddreams/jacobsladder/template/: TemplateSettings.java  TemplateSettingsActivity.java  TemplateWallpaperService.java
app/src/main/java/com/mycardboarddreams/jacobsladder/view/: RolloutView.java  WallpaperSurface.java
app/src/main/java/net/margaritov/preference/colorpicker/: ColorPickerDialog.java  ColorPickerGradientView.java  ColorPickerPanelView.java  ColorPickerPreference.java
app/src/main/res/drawable/: alpha_tiled_background.xml  preference_list_divider.xml
app/src/main/res/drawable-nodpi/: selector_theme_enabled_color.xml  toast_backing.xml
app/src/main/res/layout/: custom_toast.xml  dialog_color_picker.xml  font_size_widget.xml  help_dialog.xml  help_dialog_item.xml  preference_background_checkbox.xml  preference_create_custom_theme.xml  preference_group_custom_colors.xml  preference_group_custom_panel.xml  preference_save_custom_theme.xml  preference_save_custom_theme_view.xml  preference_select_theme_view.xml  preference_theme_list_item.xml  preference_widget_seekbar.xml  settings_loading.xml
app/src/main/res/layout-land/: dialog_color_picker.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: whitewallpaper.xml  whitewallpaper_settings.xml
common/src/main/java/com/mycardboarddreams/jacobsladder/: TestProperties.java
testdisplay/: build.gradle
testdisplay/src/main/java/com/mycardboarddreams/jacobsladder/: AggregateStats.java
(+6 files in other folders)
